--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Level/MainMap.MainMap
-EditorStartupMap=/Game/Level/MainMap.MainMap
+GameDefaultMap=/Game/Level/BasicMap.BasicMap
+EditorStartupMap=/Game/Level/BasicMap.BasicMap
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
