--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Level/BasicMap.BasicMap
 EditorStartupMap=/Game/Level/BasicMap.BasicMap
+GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPerson_GameMode.BP_ThirdPerson_GameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
